--- a/INSTALL
+++ b/INSTALL
@@ -7,8 +7,9 @@ probably already have if you are reading this) and then importing the module.
 Example Usage:
 
 >>> import sunpy
->>> sunpy.Sun.radius()
-961.48218632473686
->>> sunpy.dev.plot_fits()
->>> sunpy.dev.plot_fits('aia.fits')
+>>> import matplotlib.cm as cm
+>>> import matplotlib.colors as colors
+>>> map = sunpy.Map('sunpy/dev/sample-data/AIA20110319_105400_0171.fits')
+>>> map.header['crpix1']
+>>> map.plot(cm=cm.hot, norm=colors.Normalize(1, 2048))
 
