Documented dev.cm module.

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ To request a new feature or to report a bug, visit
   
     https://launchpad.net/sunpy
 
-To find out more information about the project vsibit:
+To find out more information about the project visit:
   
     http://sunpy.org
     
