--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -1,15 +1,22 @@
-SunPy currently does not yet have support for a standard installation.
-Support should be added at the time of our first official release (v0.1).
+To install the latest version of SunPy, download and extract the latest
+tarball from:
 
-In the mean time you can test SunPy by simply downloading the code (which you
-probably already have if you are reading this) and then importing the module.
+    https://github.com/sunpy/sunpy/tarball/master
+    
+Enter the top-level directory in the extracted files and run:
+
+    python setup.py build
+    sudo python setup.py install
 
 Example Usage:
 
 >>> import sunpy
 >>> import matplotlib.cm as cm
 >>> import matplotlib.colors as colors
->>> aia = sunpy.make_map('doc/sample-data/AIA20110319_105400_0171.fits')
+>>> aia = sunpy.make_map(sunpy.AIA_171_IMAGE)
 >>> aia.header['crpix1']
 >>> aia.show(cm=cm.hot, norm=colors.Normalize(1, 2048))
 
+For detailed installation instructions, see:
+
+ http://www.sunpy.org/doc/guide/installation/index.html
