--- a/docs/whatsnew/2.0.rst
+++ b/docs/whatsnew/2.0.rst
@@ -30,3 +30,5 @@ pacakge. In particular:
   pixel. This is one pixel less than the previously returned value. Note that
   this means the ``reference_pixel`` now does **not** have the same value as the
   FITS ``CRPIX`` values, which are one-based indices.
+- `sunpy.map.make_fitswcs_header` now correctly interprets the `reference_pixel`
+  argument as being zero-based.
