--- a/docs/whatsnew/2.0.rst
+++ b/docs/whatsnew/2.0.rst
@@ -71,7 +71,7 @@ Fixes and clarification to pixel indexing
 =========================================
 
 sunpy uses zero-based indexing when referring to pixels, where the center of the bottom left pixel of a map is at ``[0, 0] * u.pix``.
-Several parts of the API have been updated to make sure this is consistently the case across the pacakge.
+Several parts of the API have been updated to make sure this is consistently the case across the package.
 In particular:
 
 - `sunpy.map.GenericMap.top_right_coord` previously had an off-by-one error in the calculation of the top right coordinate.
@@ -81,7 +81,7 @@ In particular:
 - `sunpy.map.GenericMap.reference_pixel` now returns a zero-based reference pixel.
   This is one pixel less than the previously returned value.
   Note that this means the ``reference_pixel`` now does **not** have the same value as the FITS ``CRPIX`` values, which are one-based indices.
-- `sunpy.map.make_fitswcs_header` now correctly interprets the `reference_pixel` argument as being zero-based.
+- `sunpy.map.make_fitswcs_header` now correctly interprets the `reference_pixel` argument as being zero-based, in previous releases it incorrectly interpreted the `reference_pixel` as one-based
 
 Standardization of `~sunpy.map.GenericMap.submap` and `~sunpy.map.GenericMap.draw_rectangle`
 ============================================================================================
@@ -89,7 +89,7 @@ Standardization of `~sunpy.map.GenericMap.submap` and `~sunpy.map.GenericMap.dra
 Both `~sunpy.map.GenericMap.submap` and `~sunpy.map.GenericMap.draw_rectangle` allow specification of "rectangles" in world (spherical) coordinates.
 In versions prior to 2.0 you passed the coordinates of the rectangle to ``draw_rectangle`` as a bottom left coordinate, and a height and width, but for submap you passed it as a bottom left and a top right.
 In 2.0 the way you call both methods has changed, to accept a bottom left and then either width and height or a top right coordinate.
-As part of this change, the ``top_right``, ``width``, and ``height`` arguments must always be keyword arguments, i.e. ``width=10*u.arcsec``.
+As part of this change, the ``top_right``, ``width``, and ``height`` arguments **must** always be keyword arguments, i.e. ``width=10*u.arcsec`` 
 
 This change allows you to give the same rectangle specification to `~sunpy.map.GenericMap.submap` as to `~sunpy.map.GenericMap.draw_rectangle`.
 Which is especially useful when you wish to plot a cropped area of a map, along with it's context in the parent map::
