--- a/changelog/4338.removal.rst
+++ b/changelog/4338.removal.rst
@@ -1,2 +1,2 @@
-Depreacted the use of `sunpy.map.Map.size` property
+Deprecated the use of `sunpy.map.Map.size` property
 with suggested use of `sunpy.map.Map.data.size` instead.
