--- a/changelog/4340.bugfix.rst
+++ b/changelog/4340.bugfix.rst
@@ -1,7 +1,10 @@
 Data products from `~sunpy.net.dataretriever.NOAAIndicesClient` and
 `~sunpy.net.dataretriever.NOAAPredictClient` have been updated to download
 new JSON files. The old text files which the data used to come in no longer
-exist.
+exist. The new JSON files for `~sunpy.net.dataretriever.NOAAIndicesClient`
+now do not have the following columns:
+- Geomagnetic Observed and Smoothed
+- Sunspot Numbers Ratio (RI/SW)
 
 Both `sunpy.timseries.sources.NOAAIndicesTimeSeries` and
 `sunpy.timseries.sources.NOAAPredictIndicesTimeSeries` have been updated to
