deprecated search metadata for jsoc

--- a/changelog/4358.breaking.1.rst
+++ b/changelog/4358.breaking.1.rst
@@ -1,1 +1,1 @@
-Since ``HEK`` queries now return a `~sunpy.net.helio.hec.HEKResponse`, `~sunpy.net.hek.HEKTable` is removed.
+HEK client queries now return a `~sunpy.net.helio.hec.HEKResponse`, `~sunpy.net.hek.HEKTable` is removed.
