--- a/changelog/4358.bugfix.rst
+++ b/changelog/4358.bugfix.rst
@@ -1,1 +1,1 @@
-Fixed a bug due to which `:func:~sunpy.net.helio.parser.wsdl_retriever` ignored previously discovered Taverna links.
+Fixed a bug due to which :meth:`~sunpy.net.helio.parser.wsdl_retriever` ignored previously discovered Taverna links.
