--- a/changelog/4358.feature.2.rst
+++ b/changelog/4358.feature.2.rst
@@ -1,1 +1,1 @@
-`~sunpy.net.helio.attrs.MaxRecords` and `~sunpy.net.helio.attrs.TableName` added as ``attrs`` for HELIO searches.
+`~sunpy.net.helio.attrs.MaxRecords` and `~sunpy.net.helio.attrs.TableName` added as "attrs" for HELIO searches.
