added str and repr

--- a/changelog/4011.bugfix.rst
+++ b/changelog/4011.bugfix.rst
@@ -1,2 +1,2 @@
-When sunpy moved to using Zeep for 1.0, we broke the ability to filter search results from the `sunpy.net.vso.VSOClient`.
-This feature has been restored by enabling the hashing of the the results from the `sunpy.net.vso.VSOClient` using the "fileid".
+The ability to to filter search results from the `~sunpy.net.vso.VSOClient` was broken.
+This has now been restored.
