--- a/changelog/4358.removal.1.rst
+++ b/changelog/4358.removal.1.rst
@@ -1,1 +1,1 @@
-Deprecated `~sunpy.net.jsoc.attrs.Keys`.
+`~sunpy.net.jsoc.attrs.Keys` is deprecated; use :meth:`~sunpy.net.jsoc.JSOCResponse.show` instead.
