--- a/changelog/4358.removal.rst
+++ b/changelog/4358.removal.rst
@@ -1,1 +1,1 @@
-`~sunpy.net.hek.attrs.Time` is deprecated; `~sunpy.net.attrs.Time` can be used instead.
+`~sunpy.net.hek.attrs.Time` is deprecated; `~sunpy.net.attrs.Time` should be used instead.
