--- a/changelog/4405.feature.rst
+++ b/changelog/4405.feature.rst
@@ -1,1 +1,1 @@
-`sunpy.net.jsoc.JSOCClient.request_data` now support additional parameter `method` which allows user to download staged data as single .tar file.
+`sunpy.net.jsoc.JSOCClient.request_data` now support additional parameter "method" which allows user to download staged data as single .tar file.
