--- a/changelog/4445.bugfix.rst
+++ b/changelog/4445.bugfix.rst
@@ -1,1 +1,1 @@
-Fixes issue where NAXISn is not updated after invoking :method:`.GenericMap.resample`
+Fixes issue where NAXISn is not updated after invoking :meth:`.GenericMap.resample`
