Apply suggestions from code review
Co-authored-by: Nabil Freij <nabil.freij@gmail.com>

--- a/changelog/4472.docfix.rst
+++ b/changelog/4472.docfix.rst
@@ -1,2 +1,1 @@
-Add information about plot_function signature and return type to
-:func:`~sunpy.map.mapsequence.plot`.
+Added information about the :meth:`~sunpy.map.mapsequence.plot` return type.
