--- a/changelog/4055.feature.rst
+++ b/changelog/4055.feature.rst
@@ -1,1 +1,1 @@
-Created `~sunpy.net.dataretriever.sources.GongSynopticClient` for accessing Magnetogram Synoptic Map Archives of NSO-GONG.
+Created `~sunpy.net.dataretriever.sources.GONGClient` for accessing Magnetogram Synoptic Map Archives of NSO-GONG.
