--- a/changelog/4494.docfix.rst
+++ b/changelog/4494.docfix.rst
@@ -1,1 +1,1 @@
-Added a gallery example for saving and loading GenericMaps using asdf.
+Added a gallery example for saving and loading sunpy Maps using asdf.
