--- a/changelog/4524.bugfix.rst
+++ b/changelog/4524.bugfix.rst
@@ -1,3 +1,2 @@
-All calculations of the angular radius of the Sun now use the same underlying code with the correct calculation.
-The inaccuracies were at the level of ~0.01 arcseconds.
-A previous fix to :func:`sunpy.coordinates.sun.angular_radius` was incorrect and has been reverted.
+All calculations of the angular radius of the Sun now use the same underlying code with the accurate calculation.
+The previous inaccuracy was a relative error of ~0.001% (0.01 arcseconds) for an observer at 1 AU, but could be as large as ~0.5% for Parker Solar Probe perihelia.
