--- a/changelog/4584.trivial.rst
+++ b/changelog/4584.trivial.rst
@@ -1,1 +1,1 @@
-`~sunpy.coordinates.sun.apparent_longitude()` and `~sunpy.coordinates.sun.apparent_latitude()` functions will now use `~astropy.coordinates.GeocentricTrueEcliptic` coordinates
+`sunpy.sun` functions now make use of the `~astropy.coordinates.GeocentricTrueEcliptic` frame to simplify internal calculations, but the returned values are unchanged.
