--- a/changelog/4589.feature.rst
+++ b/changelog/4589.feature.rst
@@ -1,1 +1,1 @@
-Add support for pathlib.Path objects to be passed to `sunpy.timeseries.TimeSeries`.
+Add support for `pathlib.Path` objects to be passed to `sunpy.timeseries.TimeSeries`.
