some minor style changes

--- a/changelog/4394.feature.rst
+++ b/changelog/4394.feature.rst
@@ -1,1 +1,1 @@
-Add support to the GOES XRS fido client to download new GOES 16 & 17 data reprocessed GOES 13, 14 and 15 data.
+Add the ability to download new GOES 16 & 17 data alongside the reprocessed GOES 13, 14 and 15 data via the GOES-XRS Fido client.
