--- a/changelog/4443.feature.rst
+++ b/changelog/4443.feature.rst
@@ -1,1 +1,1 @@
-Added `~sunpy.coordinates.utils.solar_angle_equivalencies` to convert between arcsec on the Sun and km using the small angle approximation.
+Added `~sunpy.coordinates.utils.solar_angle_equivalencies` to convert between a physical distance on the Sun (e.g., km) to an angular separation as seen by an observer (e.g., arcsec).
