--- a/changelog/4665.feature.rst
+++ b/changelog/4665.feature.rst
@@ -1,1 +1,1 @@
-Add two new colormaps that are used for plotting RHESSI maps.
+Add two new colormaps (``rhessi`` and ``std_gamma_2``) that are used for plotting RHESSI maps.
