--- a/changelog/4358.breaking.1.rst
+++ b/changelog/4358.breaking.1.rst
@@ -1,1 +1,1 @@
-Queries to `~sunpy.net.hek.HEKClient` now return a `~sunpy.net.hek.HEKResponse`, `~sunpy.net.hek.HEKTable` is removed. This is to enable compatibility with ``Fido``.
+Queries made with `~sunpy.net.hek.HEKClient.search` now return a `~sunpy.net.hek.HEKResponse`, `~sunpy.net.hek.HEKTable` is removed. This is to enable compatibility with ``Fido``.
