--- a/changelog/4358.breaking.2.rst
+++ b/changelog/4358.breaking.2.rst
@@ -1,1 +1,1 @@
-Previously slicing a 1 element `~sunpy.net.fido_factory.UnifiedResponse` returned another `~sunpy.net.fido_factory.UnifiedResponse`, now it will return the search directly.
+Previously slicing a `~sunpy.net.fido_factory.UnifiedResponse` down to length one returned another `~sunpy.net.fido_factory.UnifiedResponse`, now it will return a `~sunpy.net.base_client.BaseQueryResponse` object.
