--- a/changelog/4358.breaking.rst
+++ b/changelog/4358.breaking.rst
@@ -1,1 +1,1 @@
-:meth:`~sunpy.net.helio.HECClient.time_query` has been deprecated and will be removed in sunpy 3.1; :meth:`~sunpy.net.helio.HECClient.search` is the replacement.
+`~sunpy.net.helio.HECClient.time_query` has been deprecated and will be removed in sunpy 3.1; `~sunpy.net.helio.HECClient.search` is the replacement.
