Apply suggestions from code review
Co-authored-by: Albert Y. Shih <ayshih@gmail.com>

--- a/changelog/4709.doc.rst
+++ b/changelog/4709.doc.rst
@@ -1,1 +1,1 @@
-Created a new gallery example for `~sunpy.coordinates.NorthOffsetFrame`.
+Created the new gallery example :ref:`sphx-glr-generated-gallery-units-and-coordinates-north-offset-frame-py` for `~sunpy.coordinates.NorthOffsetFrame`.
