--- a/changelog/4819.trivial.rst
+++ b/changelog/4819.trivial.rst
@@ -1,3 +1,3 @@
-Change the format of the time returned from `~sunpy.coordinates.sun.carrington_rotation_number`
+Change the format of the time returned from :func:`~sunpy.coordinates.sun.carrington_rotation_number`
 from ``'jd'`` to ``'iso'``, so printing the `~astropy.time.Time` returned will now print an ISO
 timestamp instead of the Julian days.
