--- a/changelog/4358.breaking.2.rst
+++ b/changelog/4358.breaking.2.rst
@@ -1,1 +1,1 @@
-Previously slicing a `~sunpy.net.fido_factory.UnifiedResponse` down to length one returned another `~sunpy.net.fido_factory.UnifiedResponse`, now it will return a `~sunpy.net.base_client.BaseQueryResponse` object.
+Previously slicing the result of ``Fido.search()`` (a `~sunpy.net.fido_factory.UnifiedResponse` object) so that it had a length of one returned another `~sunpy.net.fido_factory.UnifiedResponse` object, now it will return a `~sunpy.net.base_client.QueryResponseTable` object, which is a subclass of `astropy.table.Table`.
