--- a/changelog/4358.removal.1.rst
+++ b/changelog/4358.removal.1.rst
@@ -1,1 +1,1 @@
-`~sunpy.net.jsoc.attrs.Keys` is deprecated; use :meth:`~sunpy.net.jsoc.JSOCResponse.show` instead.
+`~sunpy.net.jsoc.attrs.Keys` is deprecated; all fields are returned by default and can be filtered post search.
