--- a/changelog/4798.breaking.3.rst
+++ b/changelog/4798.breaking.3.rst
@@ -2,7 +2,7 @@ All result objects contained within the results of a ``Fido.search()`` (a
 `~sunpy.net.fido_factory.UnifiedResponse` object) are now
 `~sunpy.net.base_client.QueryResponseTable` objects (or subclasses thereof).
 These objects are subclasses of `astropy.table.Table` and can therefore be
-filtered and inspected as tabular object, and the modified tables can be passed
+filtered and inspected as tabular objects, and the modified tables can be passed
 to ``Fido.fetch``.
 
 This, while a breaking change for anyone accessing these response objects
