--- a/docs/whatsnew/2.0.rst
+++ b/docs/whatsnew/2.0.rst
@@ -113,6 +113,8 @@ In particular:
 
 .. _whatsnew-2.0-standards:
 
+.. _whatsnew-2.0-standards:
+
 Standardization of `~sunpy.map.GenericMap.submap` and `~sunpy.map.GenericMap.draw_rectangle`
 ============================================================================================
 
